--- a/server/package.json
+++ b/server/package.json
@@ -22,13 +22,15 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^9.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/fs-extra": "^9.0.11",
     "@types/node": "^15.0.2",
+    "@types/redis": "^2.8.28",
     "@types/shelljs": "^0.8.8",
     "fs-extra": "^10.0.0",
     "nodemon": "^2.0.7",
