--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
+  "engines": {
+    "node": "12.x",
+    "npm": "6.14.4"
+  },
   "scripts": {
     "clean": "rimraf dist/*",
     "copy-assets": "ts-node src/tools/copyAssets",
@@ -12,7 +16,7 @@
     "dev:start": "npm-run-all build start",
     "prepublish": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts",
+    "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
