--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "fuse.js": "^6.4.6",
     "redis": "^3.1.2"
   },
   "devDependencies": {
