--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
+    "chart.js": "^3.3.2",
     "firebase": "^8.4.3",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
